# opp_ci

./: .gitignore  CLAUDE.md  PLAN.md  README.md  alembic.ini  pyproject.toml  setenv
doc/: architecture.md  ci-notes.yml  cli_reference.md  concepts.md  configuration.md  data_model.md  deployment.md  getting_started.md  git_notes.md  github_integration.md  launchd.md  nixos.md  operational_questions.md  python_client.md  remote_cli.md  rest_api.md  single_test_parameters.md  ssl.md  systemd.md  test_matrix_dimensions.md  troubleshooting.md  web-login.md  web_ui.md  workers.md
opp_ci/: __main__.py  auth.py  catalog.py  cli.py  client.py  compatibility.py  config.py  dependency.py  executor.py  fingerprint.py  fleet.py  http.py  journal.py  logbuffer.py  notes.py  opp_env_adapter.py  passwords.py  persistence.py  platforms.py  run_output.py  scheduler.py  service.py  stages.py  worker.py  worker_logs.py
plan/: doc_consistency_review.md
tests/: test_bare_metal_opp_env.py  test_capability_tags.py  test_compatibility.py  test_coord_validation.py  test_delete_runs.py  test_dependency_lock.py  test_executor_baseline.py  test_filter_controls.py  test_fleet_resolve.py  test_log_pages.py  test_matrix_recipe.py  test_matrix_run_resolve.py  test_moving_target_matrix.py  test_opp_ci_branch_pins.py  test_opp_env_id.py  test_orphan_recovery.py  test_per_run_verdict.py  test_podman_staged.py  test_queue_expiry.py  test_remote_cli.py  test_resolve_in_place.py  test_run_by_name.py  test_run_direct_build.py  test_run_filters.py  test_run_output_streaming.py  test_service.py  (+10 more)
(+140 files in other folders)
